3.1.4 UNRELEASED
  - Fix entities in Book_Info braking build. BZ #917898
  - add translations of "Revision History"

3.1.3 Fri Feb 22 2013
  - Fix add_revision breaking XML parser. BZ #912985
  - Stronger fix for cover pages causing page number overrun. BZ #912967
  - Fix CSS for article front page subtile. BZ #913016

3.1.2 Tue Feb 19 2013
  - Fix tests failing when publican not installed. BZ #908956
  - Fix broken mr-IN/Conventions.po. BZ #908956
  - Fix footnote link unclickable. BZ #909006
  - Fix missing translations for common files. BZ #908976
  - Fix using edition for version on cover pages. BZ #912180
  - Fix nested entities causing XML::TreeBuilder to fail. BZ #912187
  - Fix for cover pages causing page number overrun. BZ #912967

3.1.1 Thu Feb 07 2013
  - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539

3.1.0 Wed Feb 06 2013
  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
  - Replace hard coded paths with Publican::ConfigData. BZ #661946
  - Ensure Publican source builds and tests without Publican being installed. BZ #874180
  - Fix broken menu alignment. BZ #880621
  - Ensure clean_ids doesn't change owner or group. BZ #854425
  - Fix incorrect Revision order. BZ #845432
  - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
  - Fix POD typos. BZ #874277
  - Remove place holder P tag from HTML para. BZ #847206
  - Allow brands to override DocType Type and URI. BZ #839128
  - Ignore unexpected parameters in cfg file, and emit a message. BZ #875021
  - Support scripts directory in brands. BZ #839975
  - Remove hard coded border from tables. BZ #875967
  - Allow menu_category to be localisable. BZ #872432
  - Fix UTF8 in brand_path breaking build. BZ #875021
  - Support wkhtmltopdf cover pages. BZ #874344
  - Add support for book_templates in brands. BZ #874344
  - Fix draft not appearing in PDF. BZ #873586
  - Change some H tags to DIV. BZ #846899