@@ -7,6 +7,7 @@ book_templates/cover.tmpl
 book_templates/footer.html
 book_templates/header.html
 book_templates/titlepage.tmpl
+book_templates/toc-xsl.tmpl
 book_templates/toc.xsl
 Build.PL
 CC0
@@ -1113,3 +1114,4 @@ windows/publican2.ico
 xt/author/perlcritic.t
 xt/author/pod-coverage.t
 xt/author/pod.t
+META.json
