@@ -1,6 +1,7 @@
 3.1.4 UNRELEASED
   - Fix entities in Book_Info braking build. BZ #917898
   - add translations of "Revision History"
+  - Fix TOC title not translated in PDF. BZ #
 
 3.1.3 Fri Feb 22 2013
   - Fix add_revision breaking XML parser. BZ #912985
